# openapi.yaml
@@ -1,93 +1,97 @@
 openapi: 3.0.1
 info:
-  title: TODO Plugin
-  description: A plugin that allows the user to create and manage a TODO list using ChatGPT. If you do not know the user's username, ask them first before making queries to the plugin. Otherwise, use the username "global".
+  title: GitHub Plugin
+  description: A plugin that allows the user to get data from GitHub using ChatGPT. If you do not know the user's username, ask them first before making queries to the plugin. Otherwise, use the username "global".
   version: 'v1'
 servers:
   - url: http://localhost:5003
 paths:
-  /todos/{username}:
+  /repo/{username}/{repo_name}:
     get:
-      operationId: getTodos
-      summary: Get the list of todos
+      operationId: getRepo
+      summary: Get repo data from GitHub
       parameters:
-      - in: path
-        name: username
-        schema:
+        - in: path
+          name: repo_name
+          schema:
             type: string
-        required: true
-        description: The name of the user.
+          required: true
+          description: The name of the repo.
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: The name of the user.
       responses:
-        "200":
+        '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getTodosResponse'
-    post:
-      operationId: addTodo
-      summary: Add a todo to the list
-      parameters:
-      - in: path
-        name: username
-        schema:
-            type: string
-        required: true
-        description: The name of the user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/addTodoRequest'
-      responses:
-        "200":
-          description: OK
-    delete:
-      operationId: deleteTodo
-      summary: Delete a todo from the list
-      parameters:
-      - in: path
-        name: username
-        schema:
-            type: string
-        required: true
-        description: The name of the user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/deleteTodoRequest'
-      responses:
-        "200":
-          description: OK
+                $ref: '#/components/schemas/getRepoResponse'
+    # post:
+    #   operationId: addTodo
+    #   summary: Add a todo to the list
+    #   parameters:
+    #   - in: path
+    #     name: username
+    #     schema:
+    #         type: string
+    #     required: true
+    #     description: The name of the user.
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           $ref: '#/components/schemas/addTodoRequest'
+    #   responses:
+    #     "200":
+    #       description: OK
+    # delete:
+    #   operationId: deleteTodo
+    #   summary: Delete a todo from the list
+    #   parameters:
+    #   - in: path
+    #     name: username
+    #     schema:
+    #         type: string
+    #     required: true
+    #     description: The name of the user.
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           $ref: '#/components/schemas/deleteTodoRequest'
+    #   responses:
+    #     "200":
+    #       description: OK
 
 components:
   schemas:
-    getTodosResponse:
+    getRepoResponse:
       type: object
       properties:
-        todos:
-          type: array
-          items:
-            type: string
-          description: The list of todos.
-    addTodoRequest:
-      type: object
-      required:
-      - todo
-      properties:
-        todo:
-          type: string
-          description: The todo to add to the list.
-          required: true
-    deleteTodoRequest:
-      type: object
-      required:
-      - todo_idx
-      properties:
-        todo_idx:
-          type: integer
-          description: The index of the todo to delete.
-          required: true
+        repo:
+          type: json
+          description: Repo data.
+    # addTodoRequest:
+    #   type: object
+    #   required:
+    #   - todo
+    #   properties:
+    #     todo:
+    #       type: string
+    #       description: The todo to add to the list.
+    #       required: true
+    # deleteTodoRequest:
+    #   type: object
+    #   required:
+    #   - todo_idx
+    #   properties:
+    #     todo_idx:
+    #       type: integer
+    #       description: The index of the todo to delete.
+    #       required: true
